redirect express server for gh api login gh token catch to localhost

--- a/src/assets/styles/components/app.scss
+++ b/src/assets/styles/components/app.scss
@@ -1,3 +1,15 @@
 .app{
   
 }
+
+li.completed{
+  text-decoration: line-through;
+}
+
+.gists-list{
+
+  a{
+    display: block;
+    margin: 5px 0;
+  }
+}
