--- a/src/assets/styles/layout/header.scss
+++ b/src/assets/styles/layout/header.scss
@@ -17,11 +17,11 @@
     &-name{
       display: flex;
       align-items: center;
-      margin: 0 5px;
+      margin: 0 20px 0 0;
     }
     &-img{
-      width: 24px;
-      margin: 0 5px;
+      width: 32px;
+      margin: 0 10px;
       display: block;
       border-radius: 24px;
     }
