--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -1,8 +1,10 @@
 @import 'main.scss';
 @import 'layout.scss';
+@import 'btn.scss';
 
 @import 'layout/header.scss';
 
 @import 'components/app.scss';
 @import 'components/gist';
 @import 'components/gists';
+@import 'components/sync';
